--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "dependencies": {
     "@angular/common": "^17.2.0",
     "@angular/core": "^17.2.0",
+    "@angular/forms": "^17.2.0",
     "@angular/platform-browser": "^17.2.0",
     "@angular/platform-browser-dynamic": "^17.2.0",
-    "@angular/forms": "^17.2.0",
     "@angular/router": "^17.2.0",
     "rxjs": "~7.8.0",
     "zone.js": "~0.14.0"
+  },
+  "devDependencies": {
+    "@angular/cli": "^17.3.11"
   }
 }
